# knot-hal-source

./: Makefile.am  configure.ac
doc/: nrfd-api.txt
include/: config.h  nrf24.h
src/dbus-obj-manager/: Makefile.am  gdbus-nrfd-objectmanager.xml  nrf-object-manager.c  nrf-object-manager.h
src/hal/comm/: comm_nrf24l01.c
src/hal/time/: time_avr.cpp
src/nrfd/: main.c  manager.c
